--- a/characters.html
+++ b/characters.html
@@ -12,7 +12,7 @@
             	<img src="assets/images/logo.png" class="logo-image" />
             	<nav class="nav_bar">
                   	<ul>
-                     	<a href="index.html"><li class="navbar_item">Home</li></a>
+                     	<a href="../"><li class="navbar_item">Home</li></a>
                         <a href="#"><li class="navbar_item active_nav">Characters</li></a>
                     </ul>
                 </nav>
