--- a/characters.html
+++ b/characters.html
@@ -9,7 +9,6 @@
     	<!-- Header Start -->
     	<header>
             <div class="container">
-            	<img src="assets/images/logo.png" class="logo-image" />
             	<nav class="nav_bar">
                   	<ul>
                      	<a href="../"><li class="navbar_item">Home</li></a>
@@ -22,9 +21,31 @@
         
         <!-- Body Start -->
         <div class="container">
+        	<center>
+            	<h3>Meet the characters!</h3>
+            </center>
 			<div>
+                <div class="image-wrapper-inline">
+                	<img src="" />
+                </div>
                 <div class="text-wrapper-inline">
-                	
+                	<p></p>
+                </div>
+            </div>
+            <div>
+            	<div class="text-wrapper-inline">
+                	<p></p>
+                </div>
+                <div class="image-wrapper-inline">
+                	<img src="" />
+                </div>
+            </div>
+            <div>
+                <div class="image-wrapper-inline">
+                	<img src="" />
+                </div>
+                <div class="text-wrapper-inline">
+                	<p></p>
                 </div>
             </div>
         </div>
