--- a/index.html
+++ b/index.html
@@ -35,12 +35,9 @@
             <br />
             <div>
                 <center>
-                	<h4>Directors Interview</h4>	
-                	<p>The director talks about why he made the show, what is his favorite episode and more!</p><br />
-                    <video height="240" controls>
-                        <source src="assets/videos/directors_interview.mp4" type="video/mp4">
-                   	Your browser does not support this video...
-                    </video>
+                    <h4>Directors Interview</h4>	
+                    <p>The director talks about why he made the show, what is his favorite episode and more!</p><br />
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/uUxRFLf_t4Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </center>
             </div>
     	</div>
