--- a/characters.html
+++ b/characters.html
@@ -23,31 +23,33 @@
         <div class="container">
         	<center>
             	<h3>Meet the characters!</h3>
+                <p>Get to know a bit about who is in the show. Lean about them, what they do and more!</p>
+                <div>
+                    <div class="image-wrapper-inline">
+                        <img src="" />
+                    </div>
+                    <div class="text-wrapper-inline">
+                        <h3></h3>
+                        <p>The smart one. Knows how to communicate with people talking in reversed time. Only one accepted into human towns. He knows the most about how to survive in the open and stay safe.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="text-wrapper-inline">
+                        <p></p>
+                    </div>
+                    <div class="image-wrapper-inline">
+                        <img src="" />
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper-inline">
+                        <img src="" />
+                    </div>
+                    <div class="text-wrapper-inline">
+                        <p></p>
+                    </div>
+                </div>
             </center>
-			<div>
-                <div class="image-wrapper-inline">
-                	<img src="" />
-                </div>
-                <div class="text-wrapper-inline">
-                	<p></p>
-                </div>
-            </div>
-            <div>
-            	<div class="text-wrapper-inline">
-                	<p></p>
-                </div>
-                <div class="image-wrapper-inline">
-                	<img src="" />
-                </div>
-            </div>
-            <div>
-                <div class="image-wrapper-inline">
-                	<img src="" />
-                </div>
-                <div class="text-wrapper-inline">
-                	<p></p>
-                </div>
-            </div>
         </div>
         <!-- Body End -->
     </body>
