--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <title>Teen Drama Site - Media Brief</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" type="text/css" href="assets/css/main_style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     </head>
     <body>
     	<!-- Header Start -->
 		<header>
         	<div class="container">
           		<center>
-                	<!--<img src="assets/images/logo.png" class="logo-image" />-->
-                    <h1></h1>
+                    <h1 class="main_page_text"><b>REVERSED.</b></h1> <!-- PLACEHOLDER LOGO -->
                 </center>
                 <nav class="nav_bar">
             	    <ul>
@@ -25,14 +25,30 @@
         
     	<!-- Body Start -->
         <div class="container">
+        	<center>
+            	<br />
+                <img src="assets/images/main-page-image.png" class="img-wrapper" />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+          	</center>
           	<div class="text-wrapper center-text">
-            	<h3>...esrever ni si gnihtyrevE</h3>
-                <center>
-                	<img src="assets/images/main-page-image.png" class="img-wrapper" />
-          		</center>
-                
+            	<h3>What would you do if your time was in reverse?</h3>
+                <div class="container">
+                	<p>When the worlds people do not accept you into their cities, what do you do? Luckily a group of friends are able to survive in the woods with nothing at all and sustain their lives by themselves the best that they can possibly do. A series of events with black magic led them to seeing the entire course of their life in reverse yet still act in normal times. Seems impossible, right?
+The only way that they can make time go normally, they have to reverse what they did with the black magic. But time is reversed so the only way they can end the curse is to find where the magic items are before they used them do exactly what they did to start the curse but reverse the entire process. This could be the end of it all, or this could save their entire lives.
+</p>
+                </div>
             </div>
             <br />
+            <br />
+			<br />
+            <br />
+			<br />
+			<br />
+			<br />
             <div>
                 <center>
                     <h4>Directors Interview</h4>	
