--- a/characters.html
+++ b/characters.html
@@ -9,6 +9,9 @@
     	<!-- Header Start -->
     	<header>
             <div class="container">
+		<center>
+                    <h1 class="main_page_text"><b>REVERSED.</b></h1> <!-- PLACEHOLDER LOGO -->
+                </center>
             	<nav class="nav_bar">
                   	<ul>
                      	<a href="index.html"><li class="navbar_item">Home</li></a>
