--- a/characters.html
+++ b/characters.html
@@ -4,17 +4,18 @@
         <title>Teen Drama Site - Media Brief</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" type="text/css" href="assets/css/main_style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 	</head>
     <body>
     	<!-- Header Start -->
     	<header>
             <div class="container">
-		<center>
+            	<center>
                     <h1 class="main_page_text"><b>REVERSED.</b></h1> <!-- PLACEHOLDER LOGO -->
                 </center>
             	<nav class="nav_bar">
                   	<ul>
-                     	<a href="index.html"><li class="navbar_item">Home</li></a>
+                     	<a href="../"><li class="navbar_item">Home</li></a>
                         <a href="#"><li class="navbar_item active_nav">Characters</li></a>
                     </ul>
                 </nav>
@@ -29,7 +30,7 @@
                 <p>Get to know a bit about who is in the show. Lean about them, what they do and more!</p>
                 <div>
                     <div class="image-wrapper-inline">
-                        <img src="" />
+                        <img src="assets/images/character_images/" />
                     </div>
                     <div class="text-wrapper-inline">
                         <h3></h3>
@@ -38,18 +39,20 @@
                 </div>
                 <div>
                     <div class="text-wrapper-inline">
-                        <p></p>
+                    	<h3></h3>
+                        <p>The dumb one. Doesn't know much of what is going on or even what the group did to make time reverse. Relies on everyone else to care for him.</p>
                     </div>
                     <div class="image-wrapper-inline">
-                        <img src="" />
+                        <img src="assets/images/character_images/" />
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper-inline">
-                        <img src="" />
+                        <img src="assets/images/character_images/" />
                     </div>
                     <div class="text-wrapper-inline">
-                        <p></p>
+                    	<h3></h3>
+                        <p>The casual one. Has a vague idea of what happened. Able to care for himself but doesn't know much about surviving outdoors</p>
                     </div>
                 </div>
             </center>
