--- a/characters.html
+++ b/characters.html
@@ -30,28 +30,28 @@
                 <p>Get to know a bit about who is in the show. Lean about them, what they do and more!</p>
                 <div>
                     <div class="image-wrapper-inline">
-                        <img src="assets/images/character_images/" />
+                        <img src="assets/images/character_images/Andy.dng" />
                     </div>
                     <div class="text-wrapper-inline">
-                        <h3></h3>
+                        <h3>Andy</h3>
                         <p>The smart one. Knows how to communicate with people talking in reversed time. Only one accepted into human towns. He knows the most about how to survive in the open and stay safe.</p>
                     </div>
                 </div>
                 <div>
                     <div class="text-wrapper-inline">
-                    	<h3></h3>
+                    	<h3>Luke</h3>
                         <p>The dumb one. Doesn't know much of what is going on or even what the group did to make time reverse. Relies on everyone else to care for him.</p>
                     </div>
                     <div class="image-wrapper-inline">
-                        <img src="assets/images/character_images/" />
+                        <img src="assets/images/character_images/Luke.dng" />
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper-inline">
-                        <img src="assets/images/character_images/" />
+                        <img src="assets/images/character_images/Ed.dng" />
                     </div>
                     <div class="text-wrapper-inline">
-                    	<h3></h3>
+                    	<h3>Ed</h3>
                         <p>The casual one. Has a vague idea of what happened. Able to care for himself but doesn't know much about surviving outdoors</p>
                     </div>
                 </div>
