--- a/characters.html
+++ b/characters.html
@@ -15,7 +15,7 @@
                 </center>
             	<nav class="nav_bar">
                   	<ul>
-                     	<a href="../"><li class="navbar_item">Home</li></a>
+                     	<a href="index.html"><li class="navbar_item">Home</li></a>
                         <a href="#"><li class="navbar_item active_nav">Characters</li></a>
                     </ul>
                 </nav>
