--- a/characters.html
+++ b/characters.html
@@ -30,7 +30,7 @@
                 <p>Get to know a bit about who is in the show. Lean about them, what they do and more!</p>
                 <div>
                     <div class="image-wrapper-inline">
-                        <img src="assets/images/character_images/Andy.png" />
+                        <img src="assets/images/character_images/Andy.png" style="width: 10vw"/>
                     </div>
                     <div class="text-wrapper-inline">
                         <h3>Andy</h3>
@@ -43,12 +43,12 @@
                         <p>The dumb one. Doesn't know much of what is going on or even what the group did to make time reverse. Relies on everyone else to care for him.</p>
                     </div>
                     <div class="image-wrapper-inline">
-                        <img src="assets/images/character_images/Luke.png" />
+                        <img src="assets/images/character_images/Luke.png" style="width: 10vw"/>
                     </div>
                 </div>
                 <div>
                     <div class="image-wrapper-inline">
-                        <img src="assets/images/character_images/Ed.png" />
+                        <img src="assets/images/character_images/Ed.png" style="width: 10vw" />
                     </div>
                     <div class="text-wrapper-inline">
                     	<h3>Ed</h3>
