--- a/characters.html
+++ b/characters.html
@@ -29,10 +29,10 @@
             	<h3>Meet the characters!</h3>
                 <p>Get to know a bit about who is in the show. Lean about them, what they do and more!</p>
                 <div>
-                    <div class="image-wrapper-inline">
+                    <div class="image-wrapper-inline text-wrapper-inline">
                         <img src="assets/images/character_images/Andy.png" style="width: 10vw"/>
                     </div>
-                    <div class="text-wrapper-inline">
+                    <div class="image-wrapper-inline text-wrapper-inline">
                         <h3>Andy</h3>
                         <p>The smart one. Knows how to communicate with people talking in reversed time. Only one accepted into human towns. He knows the most about how to survive in the open and stay safe.</p>
                     </div>
@@ -42,15 +42,15 @@
                     	<h3>Luke</h3>
                         <p>The dumb one. Doesn't know much of what is going on or even what the group did to make time reverse. Relies on everyone else to care for him.</p>
                     </div>
-                    <div class="image-wrapper-inline">
+                    <div class="image-wrapper-inline text-wrapper-inline">
                         <img src="assets/images/character_images/Luke.png" style="width: 10vw"/>
                     </div>
                 </div>
                 <div>
-                    <div class="image-wrapper-inline">
+                    <div class="image-wrapper-inline text-wrapper-inline">
                         <img src="assets/images/character_images/Ed.png" style="width: 10vw" />
                     </div>
-                    <div class="text-wrapper-inline">
+                    <div class="image-wrapper-inline text-wrapper-inline">
                     	<h3>Ed</h3>
                         <p>The casual one. Has a vague idea of what happened. Able to care for himself but doesn't know much about surviving outdoors</p>
                     </div>
