--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ The only way that they can make time go normally, they have to reverse what they
                 </div>
             </div>
             <br />
+			<center>
+            	<img src="assets/images/main_page_1.png" style="width: 20%;" />&nbsp;&nbsp;&nbsp;&nbsp;<img src="assets/images/main_page_2.png" style="width: 20%;" />
+            </center>
             <br />
 			<br />
             <br />
