--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ The only way that they can make time go normally, they have to reverse what they
             </div>
             <br />
 			<center>
+				<h3>Where would you hide?</h3>
             	<img src="assets/images/main_page_1.png" style="width: 20%;" />&nbsp;&nbsp;&nbsp;&nbsp;<img src="assets/images/main_page_2.png" style="width: 20%;" />
             </center>
             <br />
