--- a/characters.html
+++ b/characters.html
@@ -27,7 +27,7 @@
         <div class="container">
         	<center>
             	<h3>Meet the characters!</h3>
-                <p>Get to know a bit about who is in the show. Lean about them, what they do and more!</p>
+                <p>Get to know a bit about who is in the show. Learn about them, what they do and more!</p>
                 <div>
                     <div class="image-wrapper-inline text-wrapper-inline">
                         <img src="assets/images/character_images/Andy.png" style="width: 10vw"/>
