--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             	    <ul>
                   		<a href="#"><li class="navbar_item active_nav">Home</li></a> 
                     	<a href="characters.html"><li class="navbar_item">Characters</li></a>
+                        <a href="#"><li>About</li></a>
+                		<a href="#"><li>Production</li></a>
                 	</ul>
               	</nav>
           	</div>
