--- a/characters.html
+++ b/characters.html
@@ -17,6 +17,8 @@
                   	<ul>
                      	<a href="index.html"><li class="navbar_item">Home</li></a>
                         <a href="#"><li class="navbar_item active_nav">Characters</li></a>
+                        <a href="#"><li>About</li></a>
+                		<a href="#"><li>Production</li></a>
                     </ul>
                 </nav>
             </div>
