--- a/characters.html
+++ b/characters.html
@@ -48,7 +48,7 @@
                         <p>The dumb one. Doesn't know much of what is going on or even what the group did to make time reverse. Relies on everyone else to care for him.</p>
                     </div>
                     <div class="image-wrapper-inline text-wrapper-inline">
-                        <img src="assets/images/character_images/Luke.jpg" style="width: 10vw"/>
+                        <img src="assets/images/character_images/Luke.JPG" style="width: 10vw"/>
                     </div>
                 </div>
 		<br />
