--- a/characters.html
+++ b/characters.html
@@ -56,11 +56,11 @@
 		<br />
                 <div>
                     <div class="image-wrapper-inline text-wrapper-inline">
-                        <img src="assets/images/character_images/Ed.png" style="width: 10vw" />
+                        <img src="assets/images/character_images/Rowan.JPG" style="width: 10vw" />
                     </div>
                     <div class="image-wrapper-inline text-wrapper-inline">
-                    	<h3>Ed</h3>
-                        <p>The casual one. Has a vague idea of what happened. Able to care for himself but doesn't know much about surviving outdoors</p>
+                    	<h3>Rowan</h3>
+                        <p>The casual one. She a vague idea of what happened. Able to care for herself but doesn't know much about surviving outdoors</p>
                     </div>
                 </div>
             </center>
