--- a/characters.html
+++ b/characters.html
@@ -56,7 +56,7 @@
 		<br />
                 <div>
                     <div class="image-wrapper-inline text-wrapper-inline">
-                        <img src="assets/images/character_images/Rowan.JPG" style="width: 10vw" />
+                        <img src="assets/images/character_images/Rowan.png" style="width: 10vw" />
                     </div>
                     <div class="image-wrapper-inline text-wrapper-inline">
                     	<h3>Rowan</h3>
